# mtg-agent

./: .env.example  CLAUDE.md  decks.yaml  pyproject.toml
.claude/: settings.json
chrome_extension/: manifest.json  popup.html  popup.js
deploy/: Caddyfile.snippet  claude_mcp_config.json  mtg-agent.service
scripts/: deploy_pangolin.sh  setup_mongo.sh
src/mtg_agent/: chunking.py  config.py  server.py
src/mtg_agent/clients/: moxfield.py  notion.py  notion_mcp.py  scryfall.py  wotc_news.py
src/mtg_agent/db/: mongodb.py
src/mtg_agent/scripts/: recompute_deck_stats.py  refresh_commander_banlist.py  refresh_commander_banr_announcements.py  refresh_commander_bracket_announcements.py  refresh_commander_brackets.py  refresh_comprehensive_rules.py  refresh_scryfall_bulk.py  session_sync.py
src/mtg_agent/tools/: cards.py  decks.py  probability.py
